--- a/account.html
+++ b/account.html
@@ -213,6 +213,9 @@
             .account-option-description {
                 font-size: 14px;
             }
+     .modal-content {
+margin-top: 180px;
+            }
         }
     </style>
 </head>
