--- a/signin.html
+++ b/signin.html
@@ -225,7 +225,7 @@ input::placeholder {
         <div class="overlay"></div>
         <div class="sign-in-box">
             <div class="content">
-                <img src="netflix-logo.png" alt="Netflix Logo" class="logo">
+                <img src="netflix-logo.png" alt="cipherhd Logo" class="logo">
                 <h2>Sign In</h2>
                 <form action="#">
                     <input type="text" placeholder="Email or mobile number" required>
