--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
             Service Code
         </div>
         <div class="footer-copyright">
-            © 1997-2024 YourCompany, Inc.
+            © 1997-2024 CipherHD.
         </div>
     </footer>
 </div>
