--- a/helpcentre.html
+++ b/helpcentre.html
@@ -403,7 +403,7 @@ body {
             Service Code
         </div>
         <div class="footer-copyright">
-            © 1997-2024 YourCompany, Inc.
+            © 1997-2024 CipherHD.
         </div>
     </footer>
 </div>
