--- a/account.html
+++ b/account.html
@@ -369,7 +369,7 @@ margin-top: 180px;
             Service Code
         </div>
         <div class="footer-copyright">
-            © 1997-2024 YourCompany, Inc.
+           © 1997-2024 CipherHD.
         </div>
     </footer>
 </div>
